# Sonix

./: .gitattributes  CMakeLists.txt  core.cpp  core.h  getaudio.cpp  getaudio.h  main.cpp
qml/: Icon.qml  Icons.qml  Songcard.qml  Utils.js  main.qml
